<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none"
    tools:context=".ActivityB" >



   	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

   		<EditText
   		    android:id="@+id/editText1"
   		    android:layout_width="match_parent"
   		    android:layout_height="wrap_content"
   		    android:ems="10" 
   		    android:hint="@string/Title" 
   		    android:singleLine="true">

   		  
   		</EditText>
   		<EditText
   		    android:id="@+id/editText2"
   		    android:layout_width="match_parent"
   		    android:layout_height="wrap_content"
   		    android:inputType="number"
   		    android:ems="10" 
   			android:hint="@string/Price" 
   			android:singleLine="true">
   		    </EditText>
   		
   		<EditText
   		    android:id="@+id/editText3"
   		    android:layout_width="match_parent"
   		    android:layout_height="wrap_content"
   		    android:ems="10"
   		    android:inputType="textMultiLine" 
   		    android:hint="@string/Description" >
   		    </EditText>

   		<HorizontalScrollView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:scrollbars="none">
	 		<LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" >
	
	
			    <ImageView
			        android:id="@+id/imageView1"
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
	       			
	       			android:paddingLeft="5dp"
	       			android:paddingRight="5dp"
			        android:src="@drawable/glyphicons_138_picture" 
			        android:contentDescription="@string/photo"/>
			    
			   
		 	    <ImageView
			        android:id="@+id/imageView2"
			       
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
	       			android:layout_weight="1"
	       			android:paddingLeft="5dp"
	       			android:paddingRight="5dp"
	       			android:src="@drawable/glyphicons_138_picture" 
	       			android:visibility="gone"
			        android:contentDescription="@string/photo"/>
			    		    
			    <ImageView
			        android:id="@+id/imageView3"
			       
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
	       			android:layout_weight="1"	
	       			android:paddingLeft="5dp"
	       			android:paddingRight="5dp"	        
			        android:src="@drawable/glyphicons_138_picture"
			        android:visibility="gone" 
			        android:contentDescription="@string/photo"/>	
			        
   			    <ImageView
			        android:id="@+id/imageView4"
			       
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
	       			android:layout_weight="1"	
	       			android:paddingLeft="5dp"
	       			android:paddingRight="5dp"	        
			        android:src="@drawable/glyphicons_138_picture" 
			        android:visibility="gone"
			        android:contentDescription="@string/photo"/>
			      	    
			</LinearLayout>
		</HorizontalScrollView>  
 	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	       
	        android:text="@string/photo" />

<!--	    <ImageView
	        android:id="@+id/videoView1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:src="@drawable/glyphicons_180_facetime_video" />-->

	    <Button
	        android:id="@+id/button2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Post" /> 
	        
        <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="148dp" 
	        android:text="Loc"/>


	</LinearLayout>

</ScrollView>


